feat(zonas): aplicar validaciones y optimizar mapeo de DTOs en servicio de zonas